--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ server.port=8880
 spring.datasource.url=jdbc:mysql://localhost:3306/wikidev
 spring.datasource.username=wiki.db.username
 spring.datasource.password=victor
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:/mapper/*.xml
