--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=wiki
 server.port=8880
 
 spring.datasource.url=jdbc:mysql://localhost:3306/wikidev
-spring.datasource.username=wiki.db.username
+spring.datasource.username=wiki_db_username
 spring.datasource.password=victor
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:/mapper/*.xml
